force-app/main/default/objects/Category__c/fields/Progress_Tracker__c.field-meta.xml
<CustomField>
    <fullName>Progress_Tracker__c</fullName>
    <label>Progress Tracker</label>
    <referenceTo>Progress_Tracker__c</referenceTo>
    <relationshipLabel>Categories</relationshipLabel>
    <relationshipName>Categories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>