force-app/main/default/objects/Category__c/fields/Week_1__c.field-meta.xml
<CustomField>
    <fullName>Week_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Week 1</label>
    <type>Checkbox</type>
</CustomField>