force-app/main/default/objects/Category__c/fields/Week_2__c.field-meta.xml
<CustomField>
    <fullName>Week_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Week 2</label>
    <type>Checkbox</type>
</CustomField>