force-app/main/default/objects/Category__c/fields/Week_3__c.field-meta.xml
<CustomField>
    <fullName>Week_3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Week 3</label>
    <type>Checkbox</type>
</CustomField>