force-app/main/default/objects/Category__c/fields/Weekly_Goal__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Goal__c</fullName>
    <label>Weekly Goal</label>
    <type>TextArea</type>
</CustomField>